# DataEngineerKnowledge

./: .pre-commit-config.yaml  README.md  extract_exam_questions.ipynb  pyproject.toml  python_method.md  sitesearch.json  test.py
Kubernetes/: Kubernetes.xmind  k8s.md
Kubernetes/test_k8s/yaml/: app.js
Kubernetes/test_k8s/yaml/deployment/: configmap.yaml  deployment.yaml  mongo.yaml  mongo_pvc.yaml  mongo_with_config.yaml  pod.yaml  service.yaml
airflow/: Airflow.xmind
bentoML/: bentofile.yaml  readme.md  requirements.txt  service.py  test.py  train.py  yolov5_runnable.py
data-project-structure/: cookiecutter.json
data-project-structure/{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  README.md  settings.py  setup.yml
dbt_demo/dbt_test/: README.md  dbt_project.yml  profile.yml  sales.csv  user.csv
dbt_demo/dbt_test/macros/: email_validation_macro.sql
dbt_demo/dbt_test/models/: high_selling_products.sql  product_sales.sql  schema.yml  user_model.sql
dbt_demo/dbt_test/tests/: check_total_sales_integer.sql  unique_user_id_test.sql
docker/: docker.xmind
docker/airflow_docker/: docker-compose.yaml
docker/docker-test/: Dockerfile  hello.py  requirements.txt
docker/docker_python_3.7/: Dockerfile  readme.md  requirements.txt
docker/docker_python_3.7/src/: hello.py
send_email/: clean_account_in_use.py  clean_old_files.py  crontab.txt  dc_crawler.sh  pm_crawler.sh  send_email.py
simple_api_docker/: .pre-commit-config.yaml  Dockerfile  pyproject.toml  readme.md
simple_api_docker/backend/app/: main.py
simple_api_docker/backend/app/api/: api.py
simple_api_docker/backend/app/api/endpoints/: calculate.py  hello.py
(+3 files in other folders)
