[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = { version = "^0.22.0", extras = ["standard"] }
fastapi = "^0.95.2"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = {version = "^1.10.4", extras = ["dotenv"]}
emails = "^0.5.15"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.2"
psycopg2-binary = "^2.8.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.13"}
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
httpx = "^0.23.3"
elasticsearch = {extras = ["async"], version = "^8.7.0"}
typed-ast = "^1.5.4"
aiomysql = "^0.1.1"
objsize = "^0.6.1"
pympler = "^1.0.1"
ujson = "^5.7.0"
orjson = "^3.8.14"
pykakasi = "^2.2.1"

[tool.poetry.dev-dependencies]
mypy = "^1.3.0"
black = "^23.0.0"
isort = "^5.0.0"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
src_paths = ["awoo-ai-site-search-api",]
