[tool.poetry]
name = "search_app"
version = "0.1.0"
description = ""
authors = ["Yu-Hsuan <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.2"
uvicorn = "^0.13.4"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"